# pathtracer

./: .gitignore  CMakeLists.txt  batch_denoise.py
CGL/: CMakeLists.txt
CGL/include/CGL/: misc.h
CGL/src/: CMakeLists.txt
gltf/: CBempty.glb  bunny.glb
src/application/: application.cpp  application.h  glTF.h  main.cpp  main.cu  main.h  renderer.h  visual_debugger.cpp  visual_debugger.h
src/pathtracer/: advanced_bsdf.cpp  bsdf.cpp  bsdf.cu  bsdf.h  camera.cpp  camera.cu  camera.h  camera_lens.cpp  intersection.h  pathtracer.cpp  pathtracer.cu  pathtracer.h  ray.cu  ray.h  raytraced_renderer.cpp  raytraced_renderer.cu  raytraced_renderer.h  sampler.cpp  sampler.h  texture.cu  texture.h
src/scene/: bbox.cpp  bbox.cu  bbox.h  bvh.cpp  bvh.cu  bvh.h  camera_info.h  environment_light.cpp  environment_light.h  light.cpp  light.cu  light.h  primitive.cu  primitive.h  sphere.cpp  sphere.cu  sphere.h  triangle.cpp  triangle.cu  triangle.h
src/scene/collada/: camera_info.h  collada.cpp  collada.h  collada_info.h  light_info.h  material_info.h  polymesh_info.h
src/scene/gl_scene/: ambient_light.h  area_light.h  directional_light.h  mesh.cpp  mesh.h  point_light.h  scene.cpp  scene.h  sphere.cpp  sphere.h  spot_light.h
src/util/: cuda_defs.h  gpu_rand.h  halfEdgeMesh.h  image.cu  image.h  matrix3x3.cpp  matrix3x3.cu  matrix3x3.h  matrix4x4.cpp  matrix4x4.h  quaternion.cpp  quaternion.h  reservoir.cu  reservoir.h  sphere_drawing.cpp  tiny_gltf.h  transforms.h  vector2D.cpp  vector2D.h  vector3D.cpp  vector3D.h  vector4D.cpp  vector4D.h
